oldlang/parser/Parser.c
/**
 * Parser module for checking syntax errors.
 * This is an adapted Recognizer that returns
 * a parse tree comprised of Lexemes.
 * 
 * Created by Walt Loumakis
 */

#include <stdio.h>
#include <stdlib.h>
#include <string.h>
#include "Parser.h"
#include "Lexeme.h"
#include "Types.h"
#include "Lexer.h"

#define null NULL

Lexeme *current;

/**************************************************************************/
/*                     Grammar Rule Method Prototypes                     */
/**************************************************************************/

/*************************************/
/*            Universals             */
/*************************************/

static Lexeme *boolean();

/*************************************/
/*            Workspaces             */
/*************************************/

static Lexeme *workspaces();
static Lexeme *workspace();
static Lexeme *workspaceObjs();
static Lexeme *workspaceObj();
static Lexeme *workspaceAttributes();
static Lexeme *workspaceAttribute();
static Lexeme *name();
static Lexeme *language();
static Lexeme *counterExamples();
static Lexeme *counterExamplesList();
static Lexeme *counterExample();
static Lexeme *learning_opt_out();
static Lexeme *system_settings();
static Lexeme *systemSettingsObj();
static Lexeme *systemSettingsAttributes();
static Lexeme *systemSettingsAttribute();
static Lexeme *tooling();
static Lexeme *toolingObj();
static Lexeme *storeGenericResponses();
static Lexeme *disambiguation();
static Lexeme *disambiguationAttributes();
static Lexeme *disambiguationAttribute();
static Lexeme *prompt();
static Lexeme *none_of_the_above_prompt();
static Lexeme *enabled();
static Lexeme *sensitivity();
static Lexeme *human_agent_assist();
static Lexeme *humanAgentAssistAttributes();
static Lexeme *humanAgentAssistAttribute();

/* Pending functions */

static int namePending();
static int languagePending();
static int counterExamplesPending();
static int learning_opt_outPending();
static int toolingPending();
static int disambiguationPending();
static int promptPending();
static int none_of_the_above_promptPending();
static int enabledPending();

/*************************************/
/*              Intents              */
/*************************************/

static Lexeme *intentsBlock();
static Lexeme *intents();
static Lexeme *intent();
static Lexeme *intentAttributes();
static Lexeme *intentAttribute();
static Lexeme *intentName();
static Lexeme *userExamples();
static Lexeme *userExample();
static Lexeme *examples();
static Lexeme *example();
static Lexeme *exampleAttributes();
static Lexeme *exampleAttribute();
static Lexeme *mentions();
static Lexeme *mentionObjs();
static Lexeme *mentionObjsAttributes();
static Lexeme *mentionObjsAttribute();

/* Pending functions */

static int intentsBlockPending();
static int intentNamePending();

/*************************************/
/*             Entities              */
/*************************************/

static Lexeme *entitiesBlock();
static Lexeme *entities();
static Lexeme *entity();
static Lexeme *entityAttributes();
static Lexeme *entityAttribute();
static Lexeme *entityName();
static Lexeme *entityValues();
static Lexeme *entityValuesList();
static Lexeme *entityValue();
static Lexeme *entityValueAttributes();
static Lexeme *entityValueAttribute();
static Lexeme *entityValueName();
static Lexeme *synonyms();
static Lexeme *synonymList();
static Lexeme *synonym();
static Lexeme *patterns();
static Lexeme *patternList();
static Lexeme *pattern();
static Lexeme *entityValueType();
static Lexeme *fuzzy_match();

/* Pending functions */

static int entitiesBlockPending();
static int entityNamePending();
static int entityValuesPending();
static int entityValueNamePending();
static int synonymPending();
static int patternsPending();

/*************************************/
/*           Decision Tree           */
/*************************************/

static Lexeme *tree();
static Lexeme *nodeList();
static Lexeme *node();
static Lexeme *nodeAttributes();
static Lexeme *nodeAttribute();

/* Pending functions */

static int treePending();

/******************/
/*      Types     */
/******************/

static Lexeme *type();

/* Pending functions */

static int typePending();

/******************/
/*      Title     */
/******************/

static Lexeme *title();

/* Pending functions */

static int titlePending();

/******************/
/*    Children    */
/******************/

static Lexeme *children();

/* Pending functions */

static int childrenPending();

/******************/
/*     Output     */
/******************/

static Lexeme *output();
static Lexeme *optOutputValues();
static Lexeme *outputValues();
static Lexeme *outputValue();

/* Pending functions */

static int outputPending();
static int outputValuesPending();
static int outputValuePending();

///////////////////////
//       Text        //
///////////////////////

static Lexeme *text();
static Lexeme *textChoice();
static Lexeme *textValuesObj();
static Lexeme *textValuesObjAttributes();
static Lexeme *textValuesObjAttribute();
static Lexeme *values();
static Lexeme *stringList();
static Lexeme *selectionPolicy();
static Lexeme *delimeter();

/* Pending functions */

static int textPending();
static int valuesPending();
static int selectionPolicyPending();

///////////////////////
//       Pause       //
///////////////////////

static Lexeme *pause();
static Lexeme *pauseAttributes();
static Lexeme *pauseAttribute();
static Lexeme *time();
static Lexeme *typing();

/* Pending functions */

static int pausePending();
static int timePending();

///////////////////////
//       Image       //
///////////////////////

static Lexeme *image();
static Lexeme *imageAttributes();
static Lexeme *imageAttribute();
static Lexeme *source();

/* Pending functions */

static int imagePending();
static int sourcePending();

///////////////////////
//      Option       //
///////////////////////

static Lexeme *option();
static Lexeme *optionAttributes();
static Lexeme *optionAttribute();
static Lexeme *preference();
static Lexeme *options();
static Lexeme *optionsObjList();
static Lexeme *optionsObj();
static Lexeme *optionsObjAttributes();
static Lexeme *optionsObjAttribute();
static Lexeme *label();
static Lexeme *value();
static Lexeme *inputDataObj();
static Lexeme *inputAttribute();

/* Pending functions */

static int optionPending();
static int preferencePending();
static int labelPending();

///////////////////////
// Connect to Agent  //
///////////////////////

static Lexeme *connect_to_agent();
static Lexeme *connectToAgentObj();
static Lexeme *connectToAgentObjAttribute();

/* Pending functions */

static int connect_to_agentPending();

/******************/
/*    Metadata    */
/******************/

static Lexeme *metadata();
static Lexeme *metadataObj();
static Lexeme *optMetadataAttributes();
static Lexeme *metadataAttributes();
static Lexeme *metadataAttribute();
static Lexeme *fallback();

/* Pending functions */

static int metadataPending();
static int metadataAttributesPending();
static int metadataAttributePending();
static int fallbackPending();

/******************/
/*   Conditions   */
/******************/

static Lexeme *conditions();

/* Pending functions */

static int conditionsPending();

/******************/
/*  Dialog Node   */
/******************/

static Lexeme *dialog_node();

/* Pending functions */

static int dialog_nodePending();

/******************/
/*  Prev Sibling  */
/******************/

static Lexeme *previous_sibling();

/* Pending functions */

static int previous_siblingPending();

/******************/
/*   Description  */
/******************/

static Lexeme *description();

/* Pending functions */

static int descriptionPending();

/******************/
/*     Parent     */
/******************/

static Lexeme *parent();

/* Pending functions */

static int parentPending();

/******************/
/*     Context    */
/******************/

static Lexeme *context();
static Lexeme *contextObj();
static Lexeme *contextObjAttributes();
static Lexeme *contextObjAttribute();

/* Pending functions */

static int contextPending();

/******************/
/*    Next Step   */
/******************/

static Lexeme *next_step();
static Lexeme *nextStepObj();
static Lexeme *nextStepObjAttributes();
static Lexeme *nextStepObjAttribute();
static Lexeme *behavior();
static Lexeme *selector();

/* Pending functions */

static int next_stepPending();
static int behaviorPending();

/******************/
/*     Actions    */
/******************/

static Lexeme *actions();
static Lexeme *actionsObjList();
static Lexeme *actionsObj();
static Lexeme *actionsObjAttributes();
static Lexeme *actionsObjAttribute();
static Lexeme *action_type();
static Lexeme *parameters();
static Lexeme *parametersObj();
static Lexeme *parametersAttributes();
static Lexeme *parametersAttribute();
static Lexeme *result_variable();
static Lexeme *credentials();

/* Pending functions */

static int actionsPending();
static int action_typePending();
static int parametersPending();
static int result_variablePending();

/******************/
/*   Event Name   */
/******************/

static Lexeme *event_name();

/* Pending functions */

static int event_namePending();

/******************/
/*    Variable    */
/******************/

static Lexeme *variable();

/* Pending functions */

static int variablePending();

/******************/
/*   Digress In   */
/******************/

static Lexeme *digress_in();

/* Pending functions */

static int digress_inPending();

/******************/
/*   Digress Out  */
/******************/

static Lexeme *digress_out();

/* Pending functions */

static int digress_outPending();

/******************/
/* Dgrs Out Slots */
/******************/

static Lexeme *digress_out_slots();

/* Pending functions */

static int digress_out_slotsPending();

/******************/
/*   User Label   */
/******************/

static Lexeme *user_label();

/**************************************************************************/
/*                       Private Parser Functions                         */
/**************************************************************************/

static Lexeme *advance() {
	Lexeme *prev = current;
	if (strcmp(getType(current), ENDofINPUT) != 0)
		current = lex();
	return prev;
}

static int check(char *type) {
	if (strcmp(type, getType(current)) == 0)
		return 1;
	return 0;
}

static Lexeme *match(char *type) {
	if (check(type))
		return advance();
	else {
		fprintf(stderr, "Error on line %d: Expected %s, got %s.\n", getLine(current), type, getType(current));
		exit(2);
	}
}

/**************************************************************************/
/*                        Public Parser Functions                         */
/**************************************************************************/

void initParser(char *filename) {
	initLexer(filename);
}

void closeParser() {
	closeLexer();
}

void freeParseTree(Lexeme *tree) {
	if (tree == null)
		return;
	freeParseTree(car(tree));
	freeParseTree(cdr(tree));
	freeLexeme(tree);
}

Lexeme *parse() {
	current = lex();
	Lexeme *tree = workspaces();
	free(match(ENDofINPUT));
	return tree;
}

/**************************************************************************/
/*                          Grammar Rule Methods                          */
/**************************************************************************/

/*************************************/
/*            Universals             */
/*************************************/

static Lexeme *boolean() {
	if (check(TRUEVAL))
		return advance();
	else if (check(FALSEVAL))
		return advance();
	else
		return newLexeme(BAD_BOOL, UNDEFINED, UNDEFINED, getType(current), getLine(current));
}

/*************************************/
/*            Workspaces             */
/*************************************/

static Lexeme *workspaces() {
	Lexeme *a, *b;
	a = workspace();
	if (check(COMMA)) {
		free(advance());
		b = workspaces();
	}
	else
		b = null;
	return cons(WORKSPACES, a, b);
}

static Lexeme *workspace() {
	Lexeme *a;
	free(match(WORKSPACE));
	free(match(COLON));
	free(match(OBRACKET));
	a = workspaceObjs();
	free(match(CBRACKET));
	return a;
}

static Lexeme *workspaceObjs() {
	Lexeme *a, *b;
	a = workspaceObj();
	if (check(COMMA)) {
		free(advance());
		b = workspaceObjs();
	}
	else
		b = null;
	return cons(WORKSPACE_OBJ, a, b);
}

static Lexeme *workspaceObj() {
	Lexeme *a;
	free(match(OBRACE));
	a = workspaceAttributes();
	free(match(CBRACE));
	return a;
}

static Lexeme *workspaceAttributes() {
	Lexeme *a, *b;
	a = workspaceAttribute();
	if (check(COMMA)) {
		free(advance());
		b = workspaceAttributes();
	}
	else
		b = null;
	return cons(WORKSPACE_ATTR, a, b);
}

static Lexeme *workspaceAttribute() {
	if (namePending())
		return name();
	else if (descriptionPending())
		return description();
	else if (languagePending())
		return language();
	else if (intentsBlockPending())
		return intentsBlock();
	else if (entitiesBlockPending())
		return entitiesBlock();
	else if (treePending())
		return tree();
	else if (counterExamplesPending())
		return counterExamples();
	else if (metadataPending())
		return metadata();
	else if (learning_opt_outPending())
		return learning_opt_out();
	else
		return system_settings();
}

static Lexeme *name() {
	free(match(NAME));
	free(match(COLON));
	return cons(NAME, match(STRING), null);
}

static Lexeme *language() {
	free(match(LANGUAGE));
	free(match(COLON));
	return cons(LANGUAGE, match(STRING), null);
}

static Lexeme *counterExamples() {
	Lexeme *a;
	free(match(COUNTEREXAMPLES));
	free(match(COLON));
	free(match(OBRACKET));
	a = counterExamplesList();
	free (match(CBRACKET));
	return a;
}

static Lexeme *counterExamplesList() {
	Lexeme *a, *b;
	a = counterExample();
	if (check(COMMA)) {
		free(advance());
		b = counterExamplesList();
	}
	else
		b = null;
	return cons(COUNTEREXAMPLES, a, b);
}

static Lexeme *counterExample() {
	free(match(TEXT));
	free(match(COLON));
	return match(STRING);
}

static Lexeme *learning_opt_out() {
	free(match(LEARNING_OPT_OUT));
	free(match(COLON));
	return cons(LEARNING_OPT_OUT, boolean(), null);
}

static Lexeme *system_settings() {
	free(match(SYSTEM_SETTINGS));
	free(match(COLON));
	return systemSettingsObj();
}

static Lexeme *systemSettingsObj() {
	Lexeme *a;
	free(match(OBRACE));
	a = systemSettingsAttributes();
	free(match(CBRACE));
	return a;
}

static Lexeme *systemSettingsAttributes() {
	Lexeme *a, *b;
	a = systemSettingsAttribute();
	if (check(COMMA)) {
		free(advance());
		b = systemSettingsAttributes();
	}
	else
		b = null;
	return cons(SYSTEM_SETTINGS, a, b);
}

static Lexeme *systemSettingsAttribute() {
	if (toolingPending())
		return tooling();
	else if (disambiguationPending())
		return disambiguation();
	else
		return human_agent_assist();
}

static Lexeme *tooling() {
	free(match(TOOLING));
	free(match(COLON));
	return cons(TOOLING, toolingObj(), null);
}

static Lexeme *toolingObj() {
	Lexeme *a;
	free(match(OBRACE));
	a = storeGenericResponses();
	free(match(CBRACE));
	return a;
}

static Lexeme *storeGenericResponses() {
	free(match(STORE_GENERIC_RESPONSES));
	free(match(COLON));
	return boolean();
}

static Lexeme *disambiguation() {
	Lexeme *a;
	free(match(DISAMBIGUATION));
	free(match(COLON));
	free(match(OBRACE));
	a = disambiguationAttributes();
	free(match(CBRACE));
	return a;
}

static Lexeme *disambiguationAttributes() {
	Lexeme *a, *b;
	a = disambiguationAttribute();
	if (check(COMMA)) {
		free(advance());
		b = disambiguationAttributes();
	}
	else
		b = null;
	return cons(DISAMBIGUATION, a, b);
}

static Lexeme *disambiguationAttribute() {
	if (promptPending())
		return prompt();
	else if (none_of_the_above_promptPending())
		return none_of_the_above_prompt();
	else if (enabledPending())
		return enabled();
	else
		return sensitivity();
}

static Lexeme *prompt() {
	free(match(PROMPT));
	free(match(COLON));
	return cons(PROMPT, match(STRING), null);
}

static Lexeme *none_of_the_above_prompt() {
	free(match(NONE_OF_THE_ABOVE_PROMPT));
	free(match(COLON));
	return cons(NONE_OF_THE_ABOVE_PROMPT, match(STRING), null);
}

static Lexeme *enabled() {
	free(match(ENABLED));
	free(match(COLON));
	return cons(ENABLED, boolean(), null);
}

static Lexeme *sensitivity() {
	free(match(SENSITIVITY));
	free(match(COLON));
	return cons(SENSITIVITY, match(STRING), null);
}

static Lexeme *human_agent_assist() {
	Lexeme *a;
	free(match(OBRACE));
	a = humanAgentAssistAttributes();
	free(match(CBRACE));
	return a;
}

static Lexeme *humanAgentAssistAttributes() {
	Lexeme *a, *b;
	a = humanAgentAssistAttribute();
	if (check(COMMA)) {
		free(advance());
		b = humanAgentAssistAttributes();
	}
	else
		b = null;
	return cons(HUMAN_AGENT_ASSIST, a, b);
}

//TODO: Figure out a more comprehensive list of humanAgentAssist attributes.
static Lexeme *humanAgentAssistAttribute() {
	return null;
}

/* Pending functions */

static int namePending() {
	return check(NAME);
}

static int languagePending() {
	return check(LANGUAGE);
}

static int counterExamplesPending() {
	return check(COUNTEREXAMPLES);
}

static int learning_opt_outPending() {
	return check(LEARNING_OPT_OUT);
}

static int toolingPending() {
	return check(TOOLING);
}

static int disambiguationPending() {
	return check(DISAMBIGUATION);
}

static int promptPending() {
	return check(PROMPT);
}

static int none_of_the_above_promptPending() {
	return check(NONE_OF_THE_ABOVE_PROMPT);
}

static int enabledPending() {
	return check(ENABLED);
}

/*************************************/
/*              Intents              */
/*************************************/

static Lexeme *intentsBlock() {
	Lexeme *a;
	free(match(INTENTS));
	free(match(COLON));
	free(match(OBRACKET));
	a = intents();
	free(match(CBRACKET));
	return a;
}

static Lexeme *intents() {
	Lexeme *a, *b;
	a = intent();
	if (check(COMMA)) {
		free(advance());
		b = intents();
	}
	else
		b = null;
	return cons(INTENTS, a, b);
}

static Lexeme *intent() {
	Lexeme *a;
	free(match(OBRACE));
	a = intentAttributes();
	free(match(CBRACE));
	return a;
}

static Lexeme *intentAttributes() {
	Lexeme *a, *b;
	a = intentAttribute();
	if (check(COMMA)) {
		free(advance());
		b = intentAttributes();
	}
	else
		b = null;
	return cons(INTENT, a, b);
}

static Lexeme *intentAttribute() {
	if (intentNamePending())
		return intentName();
	else if (descriptionPending())
		return description();
	else
		return userExamples();
}

static Lexeme *intentName() {
	free(match(INTENT));
	free(match(COLON));
	return cons(INTENT_NAME, match(STRING), null);
}

static Lexeme *userExamples() {
	Lexeme *a, *b;
	a = userExample();
	if (check(COMMA)) {
		free(advance());
		b = userExamples();
	}
	else
		b = null;
	return cons(USER_EXAMPLES, a, b);
}

static Lexeme *userExample() {
	Lexeme *a;
	free(match(EXAMPLES));
	free(match(COLON));
	free(match(OBRACKET));
	a = examples();
	free(match(CBRACKET));
	return a;
}

static Lexeme *examples() {
	Lexeme *a, *b;
	a = example();
	if (check(COMMA)) {
		free(advance());
		b = examples();
	}
	else
		b = null;
	return cons(EXAMPLES, a, b);
}

static Lexeme *example() {
	Lexeme *a;
	free(match(OBRACE));
	a = exampleAttributes();
	free(match(CBRACE));
	return a;
}

static Lexeme *exampleAttributes() {
	Lexeme *a, *b;
	a = exampleAttribute();
	if (check(COMMA)) {
		free(advance());
		b = exampleAttributes();
	}
	else
		b = null;
	return cons(EXAMPLE_ATTR, a, b);
}

static Lexeme *exampleAttribute() {
	if (textPending())
		return text();
	else
		return mentions();
}

static Lexeme *mentions() {
	Lexeme *a;
	free(match(MENTIONS));
	free(match(COLON));
	free(match(OBRACKET));
	a = mentionObjs();
	free(match(CBRACKET));
	return a;
}

static Lexeme *mentionObjs() {
	Lexeme *a;
	free(match(OBRACE));
	a = mentionObjsAttributes();
	free(match(CBRACE));
	return a;
}

static Lexeme *mentionObjsAttributes() {
	Lexeme *a, *b;
	a = mentionObjsAttribute();
	if (check(COMMA)) {
		free(advance());
		b = mentionObjsAttributes();
	}
	else
		b = null;
	return cons(MENTIONS_ATTR, a, b);
}

static Lexeme *mentionObjsAttribute() {
	return entityName();
}

/* Pending functions */

static int intentsBlockPending() {
	return check(INTENTS);
}

static int intentNamePending() {
	return check(INTENT);
}

/*************************************/
/*             Entities              */
/*************************************/

static Lexeme *entitiesBlock() {
	Lexeme *a;
	free(match(ENTITIES));
	free(match(COLON));
	free(match(OBRACKET));
	a = entities();
	free(match(CBRACKET));
	return a;
}
